[package]
name = "html-to-image-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
html_to_image = { path = "../html_to_image" }
rand = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "html-to-image"
path = "src/main.rs"

[lints]
workspace = true
