[package]
name = "html-to-image-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP server that renders MiniJinja HTML to PNG using html_to_image + Poem."

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
html_to_image = { path = "../html_to_image" }
poem = { workspace = true }
poem-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
poem = { workspace = true, features = ["test"] }

[lints]
workspace = true
